Allow content-pack installer to update immutable event definitions in place
Add a checkMutability flag (default true) to DBEventDefinitionService.save and
EventDefinitionHandler.update so the content-pack upgrade path can force-update
immutable-scoped event definitions in place, preserving id and scope. The
user-facing API keeps enforcing immutability via the default.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>