@@ -72,6 +72,7 @@ import org.graylog2.database.MongoCollections;
 import org.graylog2.database.entities.DefaultEntityScope;
 import org.graylog2.database.entities.EntityScope;
 import org.graylog2.database.entities.EntityScopeService;
+import org.graylog2.database.entities.ImmutableSystemScope;
 import org.graylog2.database.entities.source.EntitySourceService;
 import org.graylog2.events.ClusterEventBus;
 import org.graylog2.plugin.PluginMetaData;
@@ -100,6 +101,7 @@ import java.util.Set;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
@@ -111,7 +113,7 @@ import static org.mockito.Mockito.when;
 @ExtendWith(MongoDBExtension.class)
 @MockitoSettings(strictness = Strictness.WARN)
 public class EventDefinitionFacadeTest {
-    public static final Set<EntityScope> ENTITY_SCOPES = Collections.singleton(new DefaultEntityScope());
+    public static final Set<EntityScope> ENTITY_SCOPES = Set.of(new DefaultEntityScope(), new ImmutableSystemScope());
     private static final String REMEDIATION_STEPS = "remediation";
 
     private ObjectMapper objectMapper;
@@ -429,6 +431,137 @@ public class EventDefinitionFacadeTest {
         assertThat(graph).isNotNull();
         Set<Entity> expectedNodes = ImmutableSet.of(eventEntityV1, notificationV1);
         assertThat(graph.nodes()).isEqualTo(expectedNodes);
+    }
+
+    /**
+     * Content-pack upgrade of an immutable-scoped (e.g. Illuminate) event definition. This is the
+     * regression case: the entity is immutable to user-facing edits, but the installer must rewrite
+     * its content in place so the entity ID is preserved across an upgrade. Without the
+     * {@code checkMutability = false} bypass in the facade, this throws "Immutable entity cannot be
+     * modified".
+     */
+    @Test
+    public void updateNativeEntityRewritesImmutableScopedDefinitionInPlace() {
+        final EventDefinitionDto existing = persistDefinition(ImmutableSystemScope.NAME, "Illuminate rule v1");
+        assertThat(existing.id()).isNotNull();
+        assertThat(existing.scope()).isEqualTo(ImmutableSystemScope.NAME);
+
+        final NativeEntity<EventDefinitionDto> existingNative = NativeEntity.create(
+                NativeEntityDescriptor.create(ModelId.of("content-pack-id"), ModelId.of(existing.id()),
+                        ModelTypes.EVENT_DEFINITION_V1, existing.title()),
+                existing);
+
+        facade.updateNativeEntity(upgradedEntity("Illuminate rule v2"), existingNative,
+                ImmutableMap.of(), ImmutableMap.of(), "admin");
+
+        final Optional<EventDefinitionDto> reloaded = eventDefinitionService.get(existing.id());
+        assertThat(reloaded).isPresent();
+        assertThat(reloaded.get().id()).isEqualTo(existing.id());                 // ID preserved
+        assertThat(reloaded.get().title()).isEqualTo("Illuminate rule v2");       // content rewritten in place
+        assertThat(reloaded.get().scope()).isEqualTo(ImmutableSystemScope.NAME);  // scope preserved
+    }
+
+    /**
+     * The same upgrade path for an ordinary (mutable, default-scoped) event definition. Nothing about
+     * the bypass should change behaviour here: the ID is still preserved and the content updated.
+     */
+    @Test
+    public void updateNativeEntityRewritesDefaultScopedDefinitionInPlace() {
+        final EventDefinitionDto existing = persistDefinition(DefaultEntityScope.NAME, "Default rule v1");
+        assertThat(existing.id()).isNotNull();
+        assertThat(existing.scope()).isEqualTo(DefaultEntityScope.NAME);
+
+        final NativeEntity<EventDefinitionDto> existingNative = NativeEntity.create(
+                NativeEntityDescriptor.create(ModelId.of("content-pack-id"), ModelId.of(existing.id()),
+                        ModelTypes.EVENT_DEFINITION_V1, existing.title()),
+                existing);
+
+        facade.updateNativeEntity(upgradedEntity("Default rule v2"), existingNative,
+                ImmutableMap.of(), ImmutableMap.of(), "admin");
+
+        final Optional<EventDefinitionDto> reloaded = eventDefinitionService.get(existing.id());
+        assertThat(reloaded).isPresent();
+        assertThat(reloaded.get().id()).isEqualTo(existing.id());
+        assertThat(reloaded.get().title()).isEqualTo("Default rule v2");
+        assertThat(reloaded.get().scope()).isEqualTo(DefaultEntityScope.NAME);
+    }
+
+    /**
+     * Guard rail: the bypass is scoped to the installer path only. A user-facing update (the default
+     * {@code checkMutability = true} save) of the same immutable entity must still be rejected, so we
+     * are not weakening the immutability contract for the public API.
+     */
+    @Test
+    public void immutableScopedDefinitionStillRejectsUserFacingUpdate() {
+        final EventDefinitionDto existing = persistDefinition(ImmutableSystemScope.NAME, "Illuminate rule v1");
+        final EventDefinitionDto handEdited = existing.toBuilder().title("hand-edited").build();
+
+        assertThatThrownBy(() -> eventDefinitionService.save(handEdited))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("Immutable entity cannot be modified");
+    }
+
+    /**
+     * Persists a brand-new event definition with the given scope (creation is never blocked by the
+     * mutability check) and returns it with its generated ID.
+     */
+    private EventDefinitionDto persistDefinition(String scope, String title) {
+        final EventDefinitionEntity entity = objectMapper.convertValue(upgradedEntity(title).data(),
+                EventDefinitionEntity.class);
+        final EventDefinitionDto dto = entity.toNativeEntity(ImmutableMap.of(), ImmutableMap.of())
+                .toBuilder()
+                .scope(scope)
+                .build();
+        return eventDefinitionService.save(dto);
+    }
+
+    /**
+     * Builds the content-pack representation of an "upgraded" event definition with the given title.
+     * It is intentionally not scheduled, so the handler's scheduling branch is a no-op against the
+     * mocked job services and the test stays focused on the persistence/scope behaviour.
+     */
+    private EntityV1 upgradedEntity(String title) {
+        final EventFieldSpec fieldSpec = EventFieldSpec.builder()
+                .dataType(FieldValueType.STRING)
+                .providers(ImmutableList.of(TemplateFieldValueProvider.Config.builder().template("template").build()))
+                .build();
+        final SeriesSpec series = Count.builder().id("id-count").field("field").build();
+        final AggregationConditions condition = AggregationConditions.builder()
+                .expression(Expr.Greater.create(Expr.NumberValue.create(2), Expr.NumberValue.create(1)))
+                .build();
+        final AggregationEventProcessorConfigEntity aggregationConfig = AggregationEventProcessorConfigEntity.builder()
+                .query(ValueReference.of("*"))
+                .streams(ImmutableSet.of())
+                .groupBy(ImmutableList.of("project"))
+                .series(ImmutableList.of(series).stream().map(SeriesSpecEntity::fromNativeEntity).toList())
+                .conditions(condition)
+                .executeEveryMs(60000L)
+                .searchWithinMs(60000L)
+                .build();
+
+        final EventDefinitionEntity eventDefinitionEntity = EventDefinitionEntity.builder()
+                .title(ValueReference.of(title))
+                .description(ValueReference.of("upgraded"))
+                .priority(ValueReference.of(1))
+                .config(aggregationConfig)
+                .alert(ValueReference.of(false))
+                .fieldSpec(ImmutableMap.of("fieldSpec", fieldSpec))
+                .keySpec(ImmutableList.of())
+                .notificationSettings(EventNotificationSettings.builder()
+                        .gracePeriodMs(60000)
+                        .backlogSize(0)
+                        .build())
+                .notifications(ImmutableList.of())
+                .storage(ImmutableList.of())
+                .isScheduled(ValueReference.of(false))
+                .build();
+
+        final JsonNode data = objectMapper.convertValue(eventDefinitionEntity, JsonNode.class);
+        return EntityV1.builder()
+                .data(data)
+                .id(ModelId.of("content-pack-ref"))
+                .type(ModelTypes.EVENT_DEFINITION_V1)
+                .build();
     }
 
     static EventDefinitionDto validEventDefinitionDto(EventProcessorConfig config) {
